src/test/ui/mismatched_types/method-help-unsatisfied-bound.stderr
error[E0599]: the method `unwrap` exists for enum `Result<(), Foo>`, but its trait bounds were not satisfied
  --> $DIR/method-help-unsatisfied-bound.rs:5:7
   |
LL | struct Foo;
   | ----------- doesn't satisfy `Foo: Debug`
...
LL |     a.unwrap();
   |       ^^^^^^ method cannot be called on `Result<(), Foo>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `Foo: Debug`
help: consider annotating `Foo` with `#[derive(Debug)]`
   |
LL | #[derive(Debug)]
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
